metadata-sfdx/force-app/main/default/objects/BugReportUpdateHistory__c/BugReportUpdateHistory__c.object-meta.xml
<CustomObject>
    <description>Custom object to store records associated with Bug Report historical updates (e.g., Status changes)</description>
    <label>Bug Report Update History</label>
    <nameField>
        <displayFormat>BRU-{00000}</displayFormat>
        <label>Bug Report Update History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bug Report Update History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>