metadata-sfdx/force-app/main/default/objects/BugReportUpdateHistory__c/fields/BugReport__c.field-meta.xml
<CustomField>
    <fullName>BugReport__c</fullName>
    <description>Master-detail to the Bug Report object.</description>
    <label>Bug Report</label>
    <referenceTo>SupportProcess__c</referenceTo>
    <relationshipLabel>Bug Report Update History</relationshipLabel>
    <relationshipName>BugReportUpdateHistory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>