metadata-sfdx/force-app/main/default/objects/BugReportUpdateHistory__c/fields/BugReportPreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>BugReportPreviousStatus__c</fullName>
    <description>The previous status that the bug report was in prior to the status change.</description>
    <label>Bug Report Previous Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>Pending Agent</fullName>
            </value>
            <value>
                <fullName>Pending Bugs Team</fullName>
            </value>
            <value>
                <fullName>Pending Aztec</fullName>
            </value>
            <value>
                <fullName>Completed - Pending New Bug</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>