metadata-sfdx/force-app/main/default/objects/BugReportUpdateHistory__c/fields/BugReportStatus__c.field-meta.xml
<CustomField>
    <fullName>BugReportStatus__c</fullName>
    <description>A stamp of the Bug Report Status at the time the Bug Report Update History record was created.</description>
    <label>Bug Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Viewed</fullName>
            </value>
            <value>
                <fullName>Pending Agent</fullName>
            </value>
            <value>
                <fullName>Pending Bugs Team</fullName>
            </value>
            <value>
                <fullName>Pending Aztec</fullName>
            </value>
            <value>
                <fullName>Completed - Pending New Bug</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>