metadata-sfdx/force-app/main/default/objects/BugReportUpdateHistory__c/fields/BugsAgent__c.field-meta.xml
<CustomField>
    <fullName>BugsAgent__c</fullName>
    <description>The bugs agent at the time of the Bug Report Update History record being created.</description>
    <label>Bugs Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>