metadata-sfdx/force-app/main/default/objects/BugReportUpdateHistory__c/fields/DurationHours__c.field-meta.xml
<CustomField>
    <fullName>DurationHours__c</fullName>
    <formula>(ToDate__c - FromDate__c)*24</formula>
    <label>Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>