metadata-sfdx/force-app/main/default/objects/BugReportUpdateHistory__c/fields/DurationMinutes__c.field-meta.xml
<CustomField>
    <fullName>DurationMinutes__c</fullName>
    <description>The time, in minutes, that the bug report spent in the status.</description>
    <formula>(ToDate__c - FromDate__c)*1440</formula>
    <label>Duration (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>