metadata-sfdx/force-app/main/default/objects/BugReportUpdateHistory__c/recordTypes/BugReportUpdateHistory.recordType-meta.xml
<RecordType>
    <fullName>BugReportUpdateHistory</fullName>
    <active>true</active>
    <description>Record type used for Bug Report update history records.</description>
    <label>Bug Report Update History</label>
</RecordType>